Fixed letter spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@ html, body {
   /* color: #403d3de3; */
   background-color: #fff;
   font-size: 14px;
+  letter-spacing: 1px;
 }
 
 h1 {
